# voting_back

./: .env.sample  .flake8  .pre-commit-config.yaml  LICENSE  README.md  manage.py  pyproject.toml
voting/: asgi.py  settings.py  urls.py  wsgi.py
voting/apps/notifications/: consumers.py  routing.py
voting/apps/survey/: admin.py  models.py  serializers.py  signals.py  survey_aggregation.py  urls.py  views.py
voting/apps/survey/migrations/: 0001_initial.py  0002_auto_20210207_2031.py
voting/apps/voting_auth/: apps.py  urls.py
